# customer-churn-prediction

./: .gitignore  Makefile  README.md  pyproject.toml
customer_churn_prediction/: config.py
notebooks/: 01_data_understanding.ipynb  03_data_visualization_and_storytelling.ipynb  04_hypothesis_testing.ipynb  05_feature_engineering_preprocessing.ipynb  06_model_implementation.ipynb  07_model_explainability.ipynb
