[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "customer_churn_prediction"
version = "0.0.1"
description = "Customer churn is one of the biggest challenges for subscription-based and telecom businesses."
authors = [
  { name = "Rahul Saini" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=This project aims to **predict whether a customer will churn** (leave the service) based on demographic and usage behavior using machine learning..0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["customer_churn_prediction"]
force_sort_within_sections = true


